# Mutils

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md  a.out  meson.build  todo.txt
include/: ansi.h  argreader.h  assert.h  env.h  file.h  funcmod.h  highlighter.h  libload.h  panic.h  polyvec.h  progbar.h  progbar_renderer.h  result.h  stringify.h  trie.h
include/logger/: handler.h  logger.h
include/mutils/: ansi.h  argreader.h  assert.h  env.h  file.h  highlighter.h  panic.h  progbar.h  progbar_renderer.h  result.h  string.h  stringify.h
include/mutils/logger/: dataformat.h  logentry.h  logger.h
include/mutils/progbar/: progbar.h  renderer.h
src/: ansi.cc  env.cc
